change in footerlogo or porfolio
