# src/controllers/portfolioController.js
@@ -5,6 +5,7 @@ export const createPortfolio = async (req, res) => {
  try {
     const { title, titleColor, detail, isActive, } = req.body;
     const thumbnailFile = req.files?.thumbnail?.[0];
+    const mainImageFile = req.files?.mainImage?.[0];
     const showRoomFiles = req.files?.showRoom || []; // multiple images
 
     if (thumbnailFile) {
@@ -13,6 +14,14 @@ export const createPortfolio = async (req, res) => {
           return res.status(400).json({ message: "Image size must be less than 2MB" });
         }
       } }
+
+      if (mainImageFile) {
+        if (mainImageFile.mimetype.startsWith("image/")) {
+          if (mainImageFile.size > 2 * 1024 * 1024) { 
+            return res.status(400).json({ message: "Image size must be less than 2MB" });
+          }
+        }
+      }
 
       for (const img of showRoomFiles) {
         if (!img.mimetype.startsWith("image/")) {
@@ -36,6 +45,17 @@ export const createPortfolio = async (req, res) => {
           (error, result) => (error ? reject(error) : resolve(result))
         );
         stream.end(thumbnailFile.buffer);
+      });
+    }
+
+    let mainImageResult = {};
+    if (mainImageFile) {
+      mainImageResult = await new Promise((resolve, reject) => {  
+        const stream = cloudinary.uploader.upload_stream(
+          { resource_type: "image", folder: "BigIdea/portfolioMainImages", timeout: 600000 },
+          (error, result) => (error ? reject(error) : resolve(result))
+        );
+        stream.end(mainImageFile.buffer);
       });
     }
 
@@ -64,6 +84,8 @@ export const createPortfolio = async (req, res) => {
       detail,
       thumbnailUrl: thumbnailResult.secure_url || null,
       thumbnailPublicId: thumbnailResult.public_id || null,
+      mainImageUrl: mainImageResult.secure_url || null,
+      mainImagePublicId: mainImageResult.public_id || null,
       showRoom: showRoomImages,
       isActive: isActive,
     });
@@ -105,11 +127,19 @@ export const updatePortfolio = async (req, res) => {
     }
 
     const thumbnailFile = req.files?.thumbnail?.[0];
+    const mainImageFile = req.files?.mainImage?.[0];
     const showRoomFiles = req.files?.showRoom || [];
 
     if (thumbnailFile) {  
       if (thumbnailFile.mimetype.startsWith("image/")) {
         if (thumbnailFile.size > 2 * 1024 * 1024) {
+          return res.status(400).json({ message: "Image size must be less than 2MB" });
+        }
+      }
+    }
+    if (mainImageFile) {
+      if (mainImageFile.mimetype.startsWith("image/")) {
+        if (mainImageFile.size > 2 * 1024 * 1024) {
           return res.status(400).json({ message: "Image size must be less than 2MB" });
         }
       }
@@ -142,6 +172,24 @@ export const updatePortfolio = async (req, res) => {
         portfolio.thumbnailUrl = thumbnailResult.secure_url;
         portfolio.thumbnailPublicId = thumbnailResult.public_id;
     }
+
+    if (mainImageFile) {
+        if (portfolio.mainImagePublicId) {
+            await cloudinary.uploader.destroy(portfolio.mainImagePublicId, { resource_type: "image" });
+      }
+    
+      const mainImageResult = await new Promise((resolve, reject) => {
+          const stream = cloudinary.uploader.upload_stream(
+              { resource_type: "image", folder: "BigIdea/portfolioMainImages", timeout: 600000 },
+              (error, result) => (error ? reject(error) : resolve(result))
+            );
+            stream.end(mainImageFile.buffer);
+        });
+        
+        portfolio.mainImageUrl = mainImageResult.secure_url;
+        portfolio.mainImagePublicId = mainImageResult.public_id;
+    }
+
     if (showRoomFiles.length > 0 && portfolio.showRoom?.length > 0) {
       for (const img of portfolio.showRoom) {
         if (img.imagePublicId) {
@@ -193,6 +241,9 @@ export const deletePortfolio = async (req, res) => {
 
     if (portfolio.thumbnailPublicId) {
       await cloudinary.uploader.destroy(portfolio.thumbnailPublicId, { resource_type: "image" });
+    }
+    if (portfolio.mainImagePublicId) {
+      await cloudinary.uploader.destroy(portfolio.mainImagePublicId, { resource_type: "image" });
     }
     if (portfolio.showRoom?.length > 0) {    
     for (const img of portfolio.showRoom) {
